# cipells

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  TODO
cipells/: __init__.py
cipells/experiments/: __init__.py
cipells/tests/: Box.py  Image.py  Interpolant.py  Interval.py  Kernel.py  XYTuple.py  __init__.py  continuous1d.py  profiles.py  transforms.py
include/cipells/: BitSet.h  Box.h  Image.h  Interpolant.h  Interval.h  Kernel.h  Mask.h  MultiImage.h  XYTuple.h  common.h  format.h  formatting.h  profiles.h  python.h  transforms.h
include/cipells/fwd/: BitSet.h  Box.h  Image.h  Interval.h  XYTuple.h  transforms.h
include/cipells/python/: Image.h  XYTuple.h
include/cipells/utils/: Deferrer.h
notebooks/: continuous1d.ipynb  convolution.ipynb  noise1d.ipynb  seeing.ipynb
src/: BitSet.cc  Box.cc  Image.cc  Interpolant.cc  Interval.cc  Kernel.cc  XYTuple.cc  format.cc  formatting.cc  image.rs  lib.rs  profiles.cc  transforms.cc
src/experiments/: continuous1d.cc
src/geom/: intervals.rs  mod.rs
src/geom/interval/: abstract_.rs  element.rs  mod.rs  test_utils.rs  tests.rs
src/geom/rect/: abstract_.rs  mod.rs  test_utils.rs  tests.rs
src/geom2/: impl_bounds.rs  impl_interval.rs  impl_rect.rs  impl_scalar.rs  mod.rs
src/impl/: formatting.h
src/python/: Box.cc  Image.cc  Interpolant.cc  Interval.cc  Kernel.cc  XYTuple.cc  module.cc  profiles.cc  transforms.cc
src/python/tests/: module.cc
tests/: Interval.py  XYTuple.py  continuous1d.py
